TAG: egload-tr7894-1
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-BP
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR7894; branch point tag

TAG: egload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge

TAG: egload-build36-2
DATE: 08/17/2006
STAFF: lec
CHANGES:
1) build 36

TAG: egload-build36-1
DATE: 07/27/2006
STAFF: lec
CHANGES:
1) build 36

TAG: egload-build36-BP
DATE: 07/19/2006
STAFF: lec
CHANGES:
1) branch point tag for build 36

TAG: egload-3-5-0-2
DATE: 05/05/2006
STAFF: lec
CHANGES:
1) MGI 3.5

TAG: egload-3-5-0-1
DATE: 04/20/2006
STAFF: lec
CHANGES:
1) MGI 3.5; merge tr7062 branch

TAG: egload-3-4-2-1
DATE: 04/19/2006
STAFF: lec
CHANGES:
1) TR 7627/add Chromosome consistency check

TAG: egload-tr7062-3
DATE: 04/19/2006
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5; loading HomoloGene IDs
2) TR 7627; add chromosome check for NCBI Gene Model coordinate vs. MGI

TAG: egload-tr7062-2
DATE: 03/24/2006
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5; loading HomoloGene IDs

TAG: egload-tr7062-1
DATE: 03/23/2006
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5; loading HomoloGene IDs

TAG: egload-tr7062-BP
DATE: 03/23/2006
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5; loading HomoloGene IDs

TAG: egload-3-4-2-0
DATE: 01/19/2006
STAFF: lec
RELEASE: 3.42
CHANGES: TR 7407; EG moved MGI ids to dbxref

TAG: egload-3-4-1-1
DATE: 12/02/05
STAFF: mbw
RELEASE: 3.41
CHANGES: merged branch tr7041 to the trunk

TAG: egload-tr7041-5
DATE: 12/01/05
STAFF: mbw
CHANGES: revised mail recipients in default config

TAG: egload-tr7041-4
DATE: 11/17/05
STAFF: mbw
CHANGES: tagged for final test on branch

TAG: egload-tr7041-3
DATE: 10/25/05
STAFF: mbw
CHANGES: added a fix for index.html

TAG: egload-tr7041-2
DATE: 10/25/05
STAFF: mbw
CHANGES: added a fix for configuration

TAG: egload-tr7041-1
DATE: 10/25/05
STAFF: mbw
CHANGES: added customized buckets

TAG: egload-tr7041-BP
DATE: 10/18/05
STAFF: mbw